--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <i class="fas fa-bars"></i>
                 </a>
             </div>
-            <div class="hamburger-menu">
+            <div class="hamburger-menu" id="hamburger">
                 <ul>
                     <li>
                         <a href="#">Home</a>
